--- a/README.Rmd
+++ b/README.Rmd
@@ -202,7 +202,8 @@ citation ("bikedata")
 
 ### 4. Code of Conduct
 
-Please note that this project is released with a [Contributor Code of Conduct](CONDUCT.md). 
-By participating in this project you agree to abide by its terms.
+Please note that this project is released with a [Contributor Code of
+Conduct](CODE_OF_CONDUCT.md).  By participating in this project you agree to
+abide by its terms.
 
 [![ropensci\_footer](http://ropensci.org/public_images/github_footer.png)](http://ropensci.org)
