--- a/README.Rmd
+++ b/README.Rmd
@@ -203,7 +203,7 @@ citation ("bikedata")
 ### 4. Code of Conduct
 
 Please note that this project is released with a [Contributor Code of
-Conduct](CODE_OF_CONDUCT.md).  By participating in this project you agree to
-abide by its terms.
+Conduct](https://github.com/ropensci/bikedata/blob/master/CODE_OF_CONDUCT.md).
+By participating in this project you agree to abide by its terms.
 
 [![ropensci\_footer](http://ropensci.org/public_images/github_footer.png)](http://ropensci.org)
