mv last ropensci.github.io -> docs.ropensci.org

--- a/README.Rmd
+++ b/README.Rmd
@@ -59,7 +59,7 @@ functions, and details of which include demographic data with
 
 The following provides a brief overview of package functionality. For more
 detail, see the
-[vignette](https://ropensci.github.io/bikedata/articles/bikedata.html).
+[vignette](https://docs.ropensci.org/bikedata/articles/bikedata.html).
 
 ------
 
