--- a/vignettes/bikedata.Rmd
+++ b/vignettes/bikedata.Rmd
@@ -32,11 +32,11 @@ London, U.K. | [Santander Cycles](https://tfl.gov.uk/modes/cycling/santander-cyc
 San Francisco Bay Area, U.S.A. | [Ford GoBike](https://www.fordgobike.com/)  | 7,000 | 540 
 New York City NY, U.S.A. | [citibike](https://www.citibikenyc.com/) | 7,000 | 458
 Chicago IL, U.S.A. | [Divvy](https://www.divvybikes.com/) | 5,837 | 576
-Montreal, Canada | [Bixi](https://montreal.bixi.com/) | 5,220 | 452
+Montreal, Canada | [Bixi](https://bixi.com/) | 5,220 | 452
 Washingon DC, U.S.A. | [Capital BikeShare](https://www.capitalbikeshare.com/) | 4,457 | 406
 Guadalajara, Mexico | [mibici](https://www.mibici.net/) | 2,116 | 242
 Minneapolis/St Paul MN, U.S.A. | [Nice Ride](https://www.niceridemn.com/) | 1,833 | 171
-Boston MA, U.S.A. | [Hubway](https://www.thehubway.com/) | 1,461 | 158
+Boston MA, U.S.A. | [Hubway](https://www.bluebikes.com/) | 1,461 | 158
 Philadelphia PA, U.S.A. | [Indego](https://www.rideindego.com) | 1,000 | 105
 Los Angeles CA, U.S.A. | [Metro](https://bikeshare.metro.net/) | 1,000 | 65
 
